--- a/scss/style.css
+++ b/scss/style.css
@@ -595,4 +595,21 @@ main .hr hr {
 }
 .hr hr {
   border: 7px dotted black;
+}
+
+.about-kid {
+  margin-top: 150px;
+  margin-left: 100px;
+  margin-bottom: 80px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.about-kid .title {
+  font-size: 50px;
+  font-weight: 900;
+  color: black;
+}
+.about-kid .info {
+  font-size: 30px;
+  color: black;
+  width: 50%;
 }/*# sourceMappingURL=style.css.map */
