--- a/scss/style.scss
+++ b/scss/style.scss
@@ -779,3 +779,21 @@ main {
         border: 7px dotted black;
     }
 }
+.about-kid {
+    margin-top: 150px;
+    margin-left: 100px;
+    margin-bottom: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    .title {
+        font-size: 50px;
+        font-weight: 900;
+        color: black;
+    }
+
+    .info {
+        font-size: 30px;
+        color: black;
+        width: 50%;
+    }
+}
