--- a/scss/style.css
+++ b/scss/style.css
@@ -672,4 +672,60 @@ main .hr hr {
   width: 100px;
   padding-top: 180px;
   padding-left: 0px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  margin-left: 10px;
+  margin-right: 100px;
+  text-align: left;
+}
+.container .about-container {
+  width: 50%;
+}
+.container .about-container h1 {
+  font-size: 50px;
+  width: 600px;
+  margin-bottom: 30px;
+  padding-left: 100px;
+  font-weight: 900;
+}
+.container .about-container pre {
+  margin-right: 50px;
+  font-size: 20px;
+  color: black;
+  font-weight: 600;
+}
+.container .about-container pre i {
+  font-family: "Courier New", Courier, monospace;
+  color: darkgray;
+  font-weight: 300;
+}
+.container .about-container .btn {
+  margin-left: 175px;
+  padding: 20px;
+  font-size: 25px;
+  border: 2px solid black;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+}
+.container .image-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+}
+.container .image-container .box1 {
+  background-color: gray;
+  height: 350px;
+  width: 300px;
+}
+.container .image-container .box2 {
+  background-color: gray;
+  height: 350px;
+  width: 300px;
 }/*# sourceMappingURL=style.css.map */
