--- a/scss/style.scss
+++ b/scss/style.scss
@@ -665,6 +665,7 @@ main {
         border: 1px dotted black;
     }
 }
+
 .about-women {
     margin-top: 150px;
     margin-left: 100px;
@@ -683,6 +684,7 @@ main {
         width: 50%;
     }
 }
+
 .womens-photo {
     display: grid;
     grid-template-columns: .2fr 1fr 1fr 1fr .2fr;
@@ -771,6 +773,7 @@ main {
 
 
 }
+
 .hr {
     margin-top: 10px;
     margin-bottom: 50px;
@@ -779,6 +782,7 @@ main {
         border: 7px dotted black;
     }
 }
+
 .about-kid {
     margin-top: 150px;
     margin-left: 100px;
@@ -797,6 +801,7 @@ main {
         width: 50%;
     }
 }
+
 .kids-photo {
     display: grid;
     grid-template-columns: .2fr 1fr 1fr 1fr .2fr;
@@ -884,4 +889,72 @@ main {
     }
 
 
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 100px;
+    text-align: left;
+    .about-container {
+        width: 50%;
+
+        h1 {
+            font-size: 50px;
+            width: 600px;
+            margin-bottom: 30px;
+            padding-left: 100px;
+            font-weight: 900;
+        }
+
+        pre {
+            margin-right: 50px;
+            font-size: 20px;
+            color: black;
+            font-weight: 600;
+
+            i {
+                font-family: 'Courier New', Courier, monospace;
+                color: darkgray;
+                font-weight: 300;
+            }
+        }
+
+        .btn {
+            margin-left: 175px; 
+            padding: 20px;
+            font-size: 25px;
+            border: 2px solid black;
+            color: black;
+            background-color: white;
+            border-radius: 5px;
+        }
+    }
+
+    .image-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 50px;
+
+
+        .box1 {
+            background-color: gray;
+            height: 350px;
+            width: 300px;
+        }
+
+        img {}
+
+        .box2 {
+            background-color: gray;
+            height: 350px;
+            width: 300px;
+        }
+
+        img {}
+    }
 }
