--- a/scss/style.css
+++ b/scss/style.css
@@ -819,7 +819,7 @@ main .hr hr {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
-  margin-bottom: 30px;
+  margin-bottom: 100px;
 }
 .office-container .office-info h1 {
   font-size: 30px;
@@ -858,4 +858,57 @@ main .hr hr {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
+}
+.footer-container {
+  background-color: black;
+  color: white;
+}
+.footer-container .footer-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  margin: 60px;
+}
+.footer-container .footer-content .container-content {
+  margin-top: 60px;
+  border: 1px dotted white;
+  text-align: center;
+  padding: 30px;
+}
+.footer-container .footer-content .container-content .footer-logo {
+  margin-bottom: 80px;
+}
+.footer-container .footer-content .container-content .h4 {
+  font-size: 20px;
+  padding: 30px;
+}
+.footer-container .footer-content .categories {
+  font-size: 40px;
+  margin-top: 60px;
+  border: 1px dotted white;
+  text-align: center;
+}
+.footer-container .footer-content .categories h3 {
+  font-size: 20px;
+  padding: 30px;
+}
+.footer-container .footer-content .link {
+  border: 1px dotted white;
+  text-align: center;
+  font-size: 40px;
+  margin-top: 60px;
+}
+.footer-container .footer-content .link h4 {
+  font-size: 20px;
+  padding: 30px;
+}
+.footer-container .footer-content .help {
+  font-size: 40px;
+  margin-top: 60px;
+  border: 1px dotted white;
+  text-align: center;
+}
+.footer-container .footer-content .help h3 {
+  font-size: 20px;
+  padding: 30px;
 }/*# sourceMappingURL=style.css.map */
