--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1080,7 +1080,7 @@ main {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
 
     .office-info {
         h1 {
@@ -1143,5 +1143,59 @@ main {
         .office-location {}
 
         .social-medias {}
+    }
+}
+.footer-container{
+    background-color: black;
+    color:white;
+    .footer-content{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap:20px;
+        margin: 60px;
+        .container-content{
+            
+            margin-top: 60px;
+            border: 1px dotted white;
+            text-align: center;
+            padding: 30px;
+            .footer-logo{
+                margin-bottom: 80px;
+            }
+            .h4{
+                font-size: 20px;
+                padding: 30px;
+            }
+        }
+        .categories{
+            font-size: 40px;
+            margin-top: 60px;
+            border: 1px dotted white;
+            text-align: center;
+            h3{
+                font-size: 20px;
+                padding: 30px;
+            }
+        }
+        .link{
+            border: 1px dotted white;
+            text-align: center;
+            font-size: 40px;
+            margin-top: 60px;
+            h4{
+               font-size: 20px; 
+               padding: 30px;
+            }
+        }
+        .help{
+            font-size: 40px;
+            margin-top: 60px;
+            border: 1px dotted white;
+            text-align: center;
+            h3{
+                font-size: 20px;
+                padding: 30px;
+            }
+        }
     }
 }
